mdmCeneveo/src/objects/Estimate_Request__c.object
<CustomObject>
    <fields>
        <fullName>Margin_Estimation_2__c</fullName>
        <formula>IF ( Inventory__c,
     (
      (Sales_Price_Estimation_2__c -(
                                   ( Cost_2__c )+ 
                                   (Cost_2__c *  Freight_Percentage__c ) + 
                                   ( Freight_Cost_Per_Case__c ) + 
                                   (Cost_2__c * 0.01)
                                 )
        ) /
                                   ( Sales_Price_Estimation_2__c - 
                                                                 (Cost_2__c *  Freight_Percentage__c )-
                                                                 ( Freight_Cost_Per_Case__c )- 
                                                                 (Cost_2__c * 0.01)
                                                                 
                                    )
      ),
    (
      (Sales_Price_Estimation_2__c -(
                                   ( Cost_2__c )+ 
                                   (Cost_2__c *  Freight_Percentage__c ) + 
                                   ( Freight_Cost_Per_Case__c ) 
                                   
                                 )
        ) /
                                   ( Sales_Price_Estimation_2__c - 
                                                                 (Cost_2__c *  Freight_Percentage__c )-
                                                                 ( Freight_Cost_Per_Case__c )
                                                                 
                                                                 
                                    )
      ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin Estimation 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_Estimation_3__c</fullName>
        <formula>IF ( Inventory__c,
     (
      (Sales_Price_Estimation_3__c -(
                                   ( Cost_3__c )+ 
                                   (Cost_3__c *  Freight_Percentage__c ) + 
                                   ( Freight_Cost_Per_Case__c ) + 
                                   (Cost_3__c * 0.01)
                                 )
        ) /
                                   ( Sales_Price_Estimation_3__c - 
                                                                 (Cost_3__c *  Freight_Percentage__c )-
                                                                 ( Freight_Cost_Per_Case__c )- 
                                                                 (Cost_3__c * 0.01)
                                                                 
                                    )
      ),
    (
      (Sales_Price_Estimation_3__c -(
                                   ( Cost_3__c )+ 
                                   (Cost_3__c *  Freight_Percentage__c ) + 
                                   ( Freight_Cost_Per_Case__c ) 
                                   
                                 )
        ) /
                                   ( Sales_Price_Estimation_3__c - 
                                                                 (Cost_3__c *  Freight_Percentage__c )-
                                                                 ( Freight_Cost_Per_Case__c )
                                                                 
                                                                 
                                    )
      ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margin Estimation 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_Qty_10__c</fullName>
        <defaultValue>0.30</defaultValue>
        <label>Margin  - Qty 10</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_Qty_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Margin  - Qty 1</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Margin_Qty_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Margin  - Qty 2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Master_Roll_Size__c</fullName>
        <label>Master Roll Size</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Material_Grade_PETG__c</fullName>
        <label>Material Grade - PETG</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP (REG PETG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K276-49 (REG PETG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP5UB (REG w/UB)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP8 (LV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K749-52 (LV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K749-22 (LV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Material_Grade_PVC_PLA__c</fullName>
        <label>Material Grade - PVC/PLA</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRAE (BA) Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRUB (UB) UV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Shrink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRAE w/ANTISTAT (AT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLA Film</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Material_Specification__c</fullName>
        <label>Material Specification</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Thickness__c</fullName>
        <label>Material Thickness</label>
        <picklist>
            <picklistValues>
                <fullName>1.5 MIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.8 MIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0 MIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.4 MIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5 MIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.8 MIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0 MIL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mfg_Location__c</fullName>
        <label>Mfg Location</label>
        <picklist>
            <picklistValues>
                <fullName>Charlotte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portland</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mill__c</fullName>
        <label>Mill</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nashua_Item_Number__c</fullName>
        <defaultValue>&quot;TBD&quot;</defaultValue>
        <inlineHelpText>Enter the Nashua item number</inlineHelpText>
        <label>Nashua Item Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_by_Date__c</fullName>
        <inlineHelpText>Enter the date you need the estimate returned to you.</inlineHelpText>
        <label>Need by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Color__c</fullName>
        <label>New Color</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_Across__c</fullName>
        <inlineHelpText>Enter the number across of images it will print on press.</inlineHelpText>
        <label>Number Across</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Back_Colors_Label__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Back Colors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Back_Colors_POS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Back Colors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Colors__c</fullName>
        <label>Number of Colors</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Designs__c</fullName>
        <inlineHelpText>Enter the number of design changes for this item. All design changes have to be the same size and type of label.</inlineHelpText>
        <label>Number of Designs</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Face_Colors__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Face Colors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Front_Colors__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Front Colors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Liner_Colors__c</fullName>
        <inlineHelpText>Enter the number of colors to be applied to the Liner</inlineHelpText>
        <label>Number of Liner Colors</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPP_Material_Grade__c</fullName>
        <inlineHelpText>Alternate Material grade - Please enter the material</inlineHelpText>
        <label>Material Grade - OPP</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPS_Material_Grade__c</fullName>
        <label>Material Grade - OPS</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>GMRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMNS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Estimate_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Option_1_add_on__c</fullName>
        <label>Option 1 add on</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_2_add_on__c</fullName>
        <label>Option 2 add on</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_3_add_on__c</fullName>
        <label>Option 3 add on</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_QTY_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order QTY 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_QTY_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order QTY 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_QTY_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order QTY 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Board_Type_Desc__c</fullName>
        <label>Other Board Type Desc</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outside_Print_Coating_Type__c</fullName>
        <label>Outside Print - Coating Type</label>
        <picklist>
            <picklistValues>
                <fullName>Gloss Water Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outside_Print_Ink_Type__c</fullName>
        <label>Outside Print - Ink Type</label>
        <picklist>
            <picklistValues>
                <fullName>Conventional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metallic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LMQ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outside_Print__c</fullName>
        <label>Outside Print</label>
        <picklist>
            <picklistValues>
                <fullName>Yes - 1 Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - 2 Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - 3 Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - 4 Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - 5 Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - 6 Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - 7 Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - 8 Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - 9 Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - 10 Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overs__c</fullName>
        <label>Overs +/-</label>
        <picklist>
            <picklistValues>
                <fullName>(+/ 0%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(+/ 1%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(+/ 2%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(+/ 3%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(+/ 5%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(+/ 10%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(+/  20%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(+/ 30%)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packaging__c</fullName>
        <label>Packaging</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Page_Size__c</fullName>
        <label>Page Size</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pallet_Size__c</fullName>
        <label>Pallet Size</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paper_2__c</fullName>
        <label>Paper 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paper_3__c</fullName>
        <label>Paper 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paper_4__c</fullName>
        <label>Paper 4</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paper_Basis_Weight__c</fullName>
        <label>Paper Basis Weight</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paper_Grade__c</fullName>
        <label>Paper Grade</label>
        <picklist>
            <picklistValues>
                <fullName>Thermal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPA Free - Thermal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carbonless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Paper__c</fullName>
        <label>Paper</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partial_Ship__c</fullName>
        <label>Partial Ship</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patch_Color__c</fullName>
        <label>Patch Color</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Perf_Location__c</fullName>
        <label>Perf Location</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Perf_Size__c</fullName>
        <label>Perf Size</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Std. Vert. 60/40 13 teeth/in.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vert. 30/60 11 teeth/in.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vert. 70/30 12 teeth/in.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vert. 50/50 17 teeth/in.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vert. 50/50 9 teeth/in.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vert. 65/35 13 teeth/in.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horz. 70/30 Cut pcs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horz. 50/50 Roll Stk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Perf_Type__c</fullName>
        <label>Perf Type</label>
        <picklist>
            <picklistValues>
                <fullName>No Perf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Zip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horizontal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horizontal Vertical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Ply</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diagonal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Double Zip</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Perforated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Perforated Between Labels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pinfed__c</fullName>
        <label>Pinfed</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pkg_Total_Estimate_Value__c</fullName>
        <formula>Cost_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pkg Total Estimate Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plant_Costs__c</fullName>
        <label>Plant Costs</label>
        <picklist>
            <picklistValues>
                <fullName>Tenn POS Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA POS Cost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Polybag_Per_Case__c</fullName>
        <label>Polybag Per Case</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Press_Approval_Formatting__c</fullName>
        <formula>IF(INCLUDES(Press_Approval__c ,&quot;Customer&quot;), &quot;Customer, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES(Press_Approval__c ,&quot;House&quot;), &quot;House, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES(Press_Approval__c ,&quot;Sales&quot;), &quot;Sales, &quot;,NULL)+&apos;&apos;+
IF(INCLUDES(Press_Approval__c ,&quot;None&quot;), &quot;None &quot;,NULL)+&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Press Approval Formatting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Press_Approval__c</fullName>
        <label>Press Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Press_Date__c</fullName>
        <label>Press</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Job_Numbers__c</fullName>
        <label>Previous Job Numbers</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Description__c</fullName>
        <defaultValue>&quot;Price&quot;</defaultValue>
        <inlineHelpText>This field will appear on the Quote under the QTY.  You can enter price here or enter another value to accommodate description of options, such as paper weight.</inlineHelpText>
        <label>Price Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <label>Price Type</label>
        <picklist>
            <picklistValues>
                <fullName>GP%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Print_Estimators__c</fullName>
        <label>Print Estimators</label>
        <picklist>
            <controllingField>Production_Site__c</controllingField>
            <picklistValues>
                <fullName>Albert Fletcher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ali Fakhar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bob Epperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bruce Moffet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carlos Lechuga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dave Kost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dave McClellan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debbie Cornwell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jenee Nelson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jennifer Studebaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kevin Schmelze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Larry Pawell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mike Vetz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pam Beck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Randy Reahard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Richard Fogg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steve Gerke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tiffany Rowland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tom Gray</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Print_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Complete for Digital work</inlineHelpText>
        <label>Digital Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Printing_Notes__c</fullName>
        <label>Printing Notes</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Printing_Plate_Charge__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Enter the total charges for Printing Plates</inlineHelpText>
        <label>Printing Plate Charge:</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Printing_Process_Colors__c</fullName>
        <label>Printing Process - Colors</label>
        <picklist>
            <picklistValues>
                <fullName>Comco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digitals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rotomec</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Printing_Process_Number_of_Colors__c</fullName>
        <label>Printing Process - Number of Colors</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Printing_Process__c</fullName>
        <label>Printing Process</label>
        <picklist>
            <picklistValues>
                <fullName>Comco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digitals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rotomec</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Printing_Specification__c</fullName>
        <inlineHelpText>Select whether the printing will be simplex or duplex</inlineHelpText>
        <label>Printing Specification</label>
        <picklist>
            <picklistValues>
                <fullName>Duplex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simplex</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process_Printing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process Printing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <picklist>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital-Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital-Color</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheetfed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Procurement_Approval__c</fullName>
        <label>Procurement Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>Assembly/Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blister Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Envelope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folding Carton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nashua Labels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publisher Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP -  Bid Custom Label - Acclaim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP - Bid Nashua Labels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP - Bid Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP - Bid POS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rx Labels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shrink Sleeve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP - Shrink Sleeve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coated Products</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>